# 1st-project

./: .env  alembic.ini  test.db
app/: .gitignore  Dockerfile  README.md  pyproject.toml  run_bot.py  run_test.py  test_producer.py
app/api/: analytics.py  analytics_v2.py  auth.py  client_auth.py  main.py  ml.py  reminders.py  requests.py  v1.py
app/core/: config.py  dependencies.py  security.py
app/database/: __init__.py  base.py  create.py  database.py  init_db.py  session.py
app/kafka/: consumer.py  producer.py
app/models/: __init__.py  analytics_raw.py  bot_logs.py  client.py  completed_request.py  order.py  reminder.py  reminder_archive.py  request.py  telegram_profile.py  user.py
app/schemas/: analyticsv2.py
app/services/: logger_service.py  send_telegram_message.py
app/tasks/: __init__.py  celery_app.py  reminderclient.py  send_reminder_task.py  test.py  verification.py
app/tg_bot/: bot.py
docker/: docker-compose.override.yml  docker-compose.yml
frontend/: App.jsx  package-lock.json  package.json
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 214bd905d41d_add_telegram_profile_and_completed_.py  32cfeae6e44c_init.py  3445f3fd9e18_add_user_id_to_request.py  4ed65b2c6f7d_add_verif.py  52cdf80a8164_update_logic.py  533941db5e14_user_upgrade.py  79ef0cfe26e5_add_telegram_profile.py  801b5bc5a3ec_expand_analytics_raw_with_full_payload.py  a0f1ff20194c_initial_migration.py  a717e12617b4_add_missing_tables.py  a72ebb2a874b_add_bot_logs_table.py  ce414d5e1ecc_add_remindeer_archive.py  (+6 more)
ml/: predict_comment.py
(+5 files in other folders)
