[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "celery>=5.3",
    "redis>=5.0"
]
